🛠️ refactor: 상품 옵션 리펙토링
- 상품 상세 조회 서비스 로직 개선 및 책임 분리
- 옵션 타입별로 별도의 DTO 응답 클래스 생성
- 조건부 로직 단순화 및 재할당 이슈 해결
- 카테고리 ID 기반 옵션 처리 로직 분리

🔗 Resolves: #142